scratch3to2: fix project description placeholder and other bugs (#8642)
* The project description placeholder is now centered on Firefox
* Fixes the close button on the Donate banner (shown on the front page when logged out) being purple instead of green
* Makes animated-thumb's "Upload Custom Thumbnail" icon have the correct color
* Changes the font weight of project and studio titles on the Explore page, in search results, and in studios from 800 to 700. This is closer to the original 2.0 design and also makes long titles less likely to be cut off.

--- a/addons/scratch3to2/main.css
+++ b/addons/scratch3to2/main.css
@@ -70,6 +70,7 @@ body:not(.sa-body-editor) .button.white:hover {
   width: auto;
   height: auto;
   padding: 2px 5px 3px 5px;
+  background-color: rgba(0, 0, 0, 0.1);
   border: 3px solid transparent;
   border-radius: 35px;
   box-shadow: none;
