--- a/addons/scratch3to2/project.css
+++ b/addons/scratch3to2/project.css
@@ -359,6 +359,11 @@ body:not(.sa-body-editor) [class*="stage_green-flag-overlay_"] > img {
   display: none;
 }
 
+/* animated-thumb dropdown */
+.sa-set-thumbnail-upload-button > img {
+  filter: var(--darkWww-box-filterInverted, brightness(0.4));
+}
+
 /* Scratch's Set Thumbnail modal */
 .update-thumbnail-info-modal .update-thumbnail-info-modal-title {
   height: auto;
@@ -439,9 +444,12 @@ body:not(.sa-body-editor) [class*="stage_green-flag-overlay_"] > img {
   color: var(--darkWww-box-scratchr2Text, #322f31);
   text-shadow: none;
 }
-.preview .project-description-edit ::placeholder {
+.preview .project-description-edit .inplace-textarea:empty:not(:focus) {
+  /* spacing around placeholder */
   padding: 5px;
   padding-top: 65px; /* center vertically */
+}
+.preview .project-description-edit ::placeholder {
   color: var(--darkWww-box-transparentText, #bebebe);
   text-shadow: none;
   font-size: 16px;
